# virtual-tour-guide

./: LICENSE  README.md  pyproject.toml
virtualtourguide/: agents.py  app.py  main.py  tasks.py  tour_guide_crew.py  utils.py
virtualtourguide/test/: test_utils.py
virtualtourguide/tools/: search_tools.py
