[tool.poetry]
name = "virtualtourguide"
version = "0.1.0"
description = ""
authors = ["Mohan Acharya <macharya@netapp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.5"}
duckduckgo-search = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
